--- a/style.css
+++ b/style.css
@@ -1,15 +1,25 @@
+
+/* Base Styling */
 @font-face {
     font-family: 'font1';
     src: url(./fonts/Nova_Square/NovaSquare-Regular.ttf);
 }
+:root {
+    --primary-color: #1e3a1e;
+    --secondary-color: #2c5e2c;
+    --main-color: #ffffff;
+    --text-color: #ffffff;
+    --shadow-color: rgba(255, 255, 255, 0.3);
+}
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     scroll-behavior: smooth;
-    color: white;
 }
 body{
-
+    color: var(--text-color);
+    font-family: 'font1', sans-serif;
 }
 .title{
     font-family: 'font1';
@@ -99,6 +109,25 @@ ul li a{
     font-weight: 600;
     text-shadow: 1px 1px 20px white;
 }
+.squad-menu{
+    /* display: none; */
+}
+.squad-menu{
+    background: rgb(18, 35, 18);
+    display: none;
+    width: 250px;
+    height: 300px;
+    position: absolute;
+    /* display: flex; */
+    flex-direction: column;
+}
+.squad-menu a{
+    font-size: 23px;
+
+}
+#squad:hover + .squad-menu:hover , .squad-menu a:hover{
+    display: block;
+}
 .home-section{
     width: 100%;
     height: 100vh;
@@ -133,7 +162,9 @@ ul li a{
     width: 180px;
 }
 
-
+.psl-winners-section h1{
+    margin-top: 50px;
+}
 .psl-winner-cards{
     /* background: #000; */
 }
